// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Explanation should snapshot when expanded: expanded 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        Here's the explanation

        <div
          class="perseus-widget-container widget-nohighlight widget-inline"
        >
          <button
            aria-controls=":r1:"
            aria-disabled="false"
            aria-expanded="true"
            class=""
            role="button"
            style="margin: 0px 2px 0px -2px; position: relative; display: inline-flex; align-items: center; justify-content: center; height: auto; padding: 0px 16px 0px 2px; border-radius: var(--wb-border-radius-radius_040); cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; user-select: none; padding-inline: 0; line-height: inherit;"
            type="button"
          >
            <span
              class=""
              style="display: inline-block; font-family: Lato, "Noto Sans", sans-serif; font-weight: 700; font-size: 18px; line-height: inherit; align-items: center; white-space: normal; overflow: hidden; text-overflow: ellipsis; pointer-events: none; text-align: left; margin-right: -6px; position: relative;"
            >
              Hide explanation!
            </span>
            <div
              class=""
              style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px 0px 0px 6px; padding: 2px; position: relative; z-index: 0; min-height: 0; min-width: auto; border-radius: var(--wb-border-radius-radius_full);"
            >
              <span
                aria-hidden="true"
                class=""
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 16px; height: 16px; mask-image: url(caret-up.svg);"
              />
            </div>
          </button>
          <div
            aria-hidden="false"
            class=""
            data-testid="content-container"
            id=":r1:"
            style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: inline-grid; flex-direction: column; margin: 14px 0px 14px -23px; padding: 0px 0px 10px 23px; position: relative; z-index: 0; min-height: 0; min-width: 100%; border-left: 0px solid #ccc; grid-template-columns: 1fr; grid-template-rows: 1fr; visibility: visible; border-left-width: 5px;"
          >
            <div
              class=""
              style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0; overflow: hidden;"
            >
              <div
                class="perseus-renderer perseus-renderer-responsive"
              >
                <div
                  class="paragraph"
                  data-perseus-paragraph-index="0"
                >
                  <div
                    class="paragraph"
                  >
                    This is an explanation
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        
Did you get that?
      </div>
    </div>
  </div>
</div>
`;

exports[`Explanation should snapshot: initial render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        Here's the explanation

        <div
          class="perseus-widget-container widget-nohighlight widget-inline"
        >
          <button
            aria-controls=":r0:"
            aria-disabled="false"
            aria-expanded="false"
            class=""
            role="button"
            style="margin: 0px 2px 0px -2px; position: relative; display: inline-flex; align-items: center; justify-content: center; height: auto; padding: 0px 16px 0px 2px; border-radius: var(--wb-border-radius-radius_040); cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; user-select: none; padding-inline: 0; line-height: inherit;"
            type="button"
          >
            <span
              class=""
              style="display: inline-block; font-family: Lato, "Noto Sans", sans-serif; font-weight: 700; font-size: 18px; line-height: inherit; align-items: center; white-space: normal; overflow: hidden; text-overflow: ellipsis; pointer-events: none; text-align: left; margin-right: -6px; position: relative;"
            >
              Explanation
            </span>
            <div
              class=""
              style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px 0px 0px 6px; padding: 2px; position: relative; z-index: 0; min-height: 0; min-width: auto; border-radius: var(--wb-border-radius-radius_full);"
            >
              <span
                aria-hidden="true"
                class=""
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 16px; height: 16px; mask-image: url(caret-down.svg);"
              />
            </div>
          </button>
          <div
            aria-hidden="true"
            class=""
            data-testid="content-container"
            id=":r0:"
            style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: inline-grid; flex-direction: column; margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px; position: relative; z-index: 0; min-height: 0; min-width: 0; border-left: 0px solid #ccc; grid-template-columns: 0fr; grid-template-rows: 0fr; visibility: hidden;"
          >
            <div
              class=""
              style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0; overflow: hidden;"
            >
              <div
                class="perseus-renderer perseus-renderer-responsive"
              >
                <div
                  class="paragraph"
                  data-perseus-paragraph-index="0"
                >
                  <div
                    class="paragraph"
                  >
                    This is an explanation
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        
Did you get that?
      </div>
    </div>
  </div>
</div>
`;
